# WebGPUTesting

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  vcpkg-configuration.json  vcpkg.json
assets/: shader.wgsl  webgpu.txt
include/: App.hpp  BufferFactory.hpp  Components.hpp  DebugTools.hpp  FrameRenderData.hpp  GPUContext.hpp  GPULogger.hpp  ImGuiManager.hpp  Input.hpp  RenderDataPacker.hpp  RenderPipelineFactory.hpp  Scene.hpp  ShaderLoader.hpp  StartupCoordinator.hpp  WindowManager.hpp  formatted_webgpu.h
src/: App.cpp  BufferFactory.cpp  GPUContext.cpp  GPULogger.cpp  ImGuiManager.cpp  Input.cpp  RenderDataPacker.cpp  RenderPipelineFactory.cpp  Scene.cpp  ShaderLoader.cpp  StartupCoordinator.cpp  WindowManager.cpp  glfw3webgpu.c  main.cpp
